--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,12 +1,11 @@
 .hero {
     display: grid;
     width: 100%;
-    height: 100vh;
     overflow: hidden;
-    margin: 0 0 5rem;
+    margin: 5rem 0 5rem;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr auto;
     justify-items: center;
+    min-height: 780px;
 
     .hero-content {
         display: flex;
@@ -17,6 +16,7 @@
         grid-row: 1;
         text-align: left;
         max-width: 1280px;
+        min-height: 61vh;
         margin: 0 auto;
         padding: 0 4rem;
 
@@ -59,8 +59,8 @@
 
     .cloud-holder {
         grid-row: 2;
-        align-self: flex-end;
         max-height: 480px;
+        min-height: 35vh;
     }
 }
 
